--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2"
+    "@faker-js/faker": "^8.0.2",
+    "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
