--- a/package.json
+++ b/package.json
@@ -9,22 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.4",
+    "@sanity/client": "6.1.4",
+    "@sanity/icons": "2.0.0",
+    "@sanity/image-url": "1",
+    "@sanity/types": "3.0.0",
+    "@sanity/ui": "1.0.0",
+    "@sanity/vision": "3",
+    "autoprefixer": "10.4.14",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "eslint": "8.45.0",
+    "eslint-config-next": "^13.4.12",
+    "next": "^13.4.12",
+    "next-sanity": "5.1.6",
+    "postcss": "8.4.27",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "sanity": "3.0.0",
+    "sanity-plugin-asset-source-unsplash": "^1.1.0",
+    "sanity-plugin-media": "^2.2.2",
+    "styled-components": "5.2.0",
+    "swiper": "^10.0.4"
+  },
+  "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "20.4.3",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "swiper": "^10.0.4",
+    "@types/styled-components": "5.1.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
-  },
-  "devDependencies": {
+    "typescript": "5.1.6",
     "@faker-js/faker": "^8.0.2",
-    "prettier-plugin-tailwindcss": "^0.4.1"
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3"
   }
 }
